Added a comment at the begininng

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html lang="en">
+
+<!-- This is the comment at the begininng of the file -->
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
